@@ -16,6 +16,10 @@ Release ...
 * [nt]roff: The ".hy" request accepts the additional flags 16 and 32 that
   allow the last or first character of a word, respectively, to be split
   off.
+* troff: Giving no arguments to ".minss" now deactivates this mechanism.
+* [nt]roff: The ".ss", ".sss", ".minss", ".lspmin", ".lspss", ".lspmax",
+  ".lc_ctype", ".hylang", and ".fzoom" number registers have been added
+  to retrieve the current values set with the respective requests.
 * troff, dpost, otfdump: The operator 12 in CFF Top DICT entries was not
   handled correctly, resulting in misleading error messages with some
   OpenType fonts. This has been fixed (bug reported by D. Jeff Dionne).
